# tikilord

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
api/: models.py  urls.py  views.py
api/management/commands/: update.py
api/migrations/: 0002_position_season_and_more.py  0003_alter_position_rating.py
api/templates/api/: index.html  top_chart.html
public/: index.html
src/: index.css  index.js
src/components/: leaderboard.js  top-chart.js
tikilord/: asgi.py  settings.py  urls.py  wsgi.py
tikiweb/: Dockerfile  apps.py  models.py  package-lock.json  package.json  urls.py  views.py
tikiweb/management/commands/: update.py
tikiweb/migrations/: 0001_initial.py
tikiweb/public/: index.html
tikiweb/src/: index.css  index.js
tikiweb/src/components/: leaderboard.js  root.js  top-chart.js
tikiweb/templates/tikiweb/: chart.html  index.html  player.html
