[tool.poetry]
name = "tikilord"
version = "0.1.0"
description = "Fetch, store, and serve data about Hearthstone Battlegrounds leaderboard data."
authors = ["Jay Gagnon <jay.gagnon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
